// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpinnerDotted matches the snapshot 1`] = `
<svg
  fill="none"
  style={
    Object {
      "color": "#fff",
      "overflow": "visible",
      "width": "100px",
    }
  }
  viewBox="0 0 66 66"
>
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 0s infinite",
        "transform": "translate(22px, -20px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 1s infinite",
        "transform": "translate(29px, 0px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 2s infinite",
        "transform": "translate(22px, 20px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 3s infinite",
        "transform": "translate(0px, 30px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 4s infinite",
        "transform": "translate(-23px, 20px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 5s infinite",
        "transform": "translate(-30px, 0px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 6s infinite",
        "transform": "translate(-23px, -20px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={1.5}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 20s cubic-bezier(0, 0.9, 0, 0.9) 7s infinite",
        "transform": "translate(0px, -30px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-center 20s ease-out infinite",
        "transformOrigin": "center",
      }
    }
  />
</svg>
`;

exports[`SpinnerDotted matches the snapshot with default props 1`] = `
<svg
  fill="none"
  style={
    Object {
      "color": "#38ad48",
      "overflow": "visible",
      "width": "50px",
    }
  }
  viewBox="0 0 66 66"
>
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0s infinite",
        "transform": "translate(22px, -20px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.1s infinite",
        "transform": "translate(29px, 0px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.2s infinite",
        "transform": "translate(22px, 20px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.30000000000000004s infinite",
        "transform": "translate(0px, 30px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.4s infinite",
        "transform": "translate(-23px, 20px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.5s infinite",
        "transform": "translate(-30px, 0px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.6000000000000001s infinite",
        "transform": "translate(-23px, -20px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={3}
    style={
      Object {
        "animation": "spinners-react-dotted-shrink 2s cubic-bezier(0, 0.9, 0, 0.9) 0.7000000000000001s infinite",
        "transform": "translate(0px, -30px)",
      }
    }
  />
  <circle
    cx="33"
    cy="33"
    fill="currentColor"
    r={6}
    style={
      Object {
        "animation": "spinners-react-dotted-center 2s ease-out infinite",
        "transformOrigin": "center",
      }
    }
  />
</svg>
`;
